# DarkWebClawlel

./: .coverage  .env.example  README.md  darkweb.db  pyproject.toml  requirements.txt
app/: config.py  main.py  scheduler.py
app/alerts/: dispatcher.py
app/alerts/channels/: __init__.py  email.py  slack.py  webhook.py
app/api/routes/: alerts.py  crawl.py  findings.py  watchlist.py
app/crawler/: __init__.py  engine.py  fetch.py  matcher.py  parsers.py  tor_session.py
app/db/: crud.py  models.py  schema.sql
app/web/: dashboard.js  index.html  style.css
docs/superpowers/plans/: 2026-05-14-dark-web-threat-intel-monitor-plan.md
docs/superpowers/specs/: 2026-05-14-dark-web-threat-intel-monitor-design.md
tests/: conftest.py
tests/e2e/: test_api.py
tests/integration/: test_db_ops.py  test_dispatcher.py
tests/unit/: test_crud.py  test_fetch.py  test_matcher.py  test_parsers.py  test_tor_session.py
